--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,21 @@
-.h1{
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+td {
+    width: 100px;
+    vertical-align: middle;
+}
+
+td img {
+    width: 100px;
+    height: 100px;
+}
+
+.header-text {
     text-align: center;
-    }
+    color: red;
+    font-family: 'Impact', sans-serif;
+    font-size: 2em; /* Ukuran font sebesar 2em untuk size=+3 */
+}
