--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,10 @@
 table {
-    width: 100%;
-    border-collapse: collapse;
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
 td {
     width: 100px;
     vertical-align: middle;
