--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,8 @@
 table {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    border-collapse: collapse;
 }
+
 td {
     width: 100px;
     vertical-align: middle;
